syntax = "proto3";

package project;

option go_package = "./project";

service ProjectService {
  rpc UpdateProjectStatus (UpdateProjectStatusRequest) returns (UpdateProjectStatusResponse) {}
}

enum ProjectStatus {
  NOT_LIVE = 0;
  LIVE = 1;
  DEPLOYING = 2;
}

message UpdateProjectStatusRequest {
  string project_id = 1;
  ProjectStatus status = 2;
}

message UpdateProjectStatusResponse {
  bool success = 1;
  string message = 2;
}
