syntax = "proto3";

package project_log;

option go_package = "./project_log";

service ProjectLogService {
  rpc PushLogs (PushLogsRequest) returns (PushLogsResponse) {}
}

message PushLogsRequest {
  string project_id = 1;
  string log = 2;
  int64 timestamp = 3;  // Epoch timestamp in seconds
}

message PushLogsResponse {
  bool success = 1;
  string message = 2;
}
